feat: add list of decorators in settings
Add a field to change lists of decorators (simple text-fields separated with ',').

fix #14

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -3,12 +3,13 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <title>Bitbucket Conventional Comments</title>
-  </head>
-  <body>
+</head>
+<body class="bbcc-popup">
     <h2>Settings:</h2>
-    <div id="settings"></div>
+    <div id="settings" class="bbcc-settings"></div>
     <h2>Labels:</h2>
-    <div id="labels"></div>
-  </body>
-  <script type="module" src="popup.js"></script>
+    <div id="labels" class="bbcc-labels"></div>
+</body>
+<script type="module" src="popup.js"></script>
 </html>
+
