--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <link rel="stylesheet" href="style.css" />
     <title>Bitbucket Conventional Comments</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Settings:</h2>
     <div id="settings"></div>
     <h2>Labels:</h2>
     <div id="labels"></div>
-</body>
-<script type="module" src="popup.js"></script>
+  </body>
+  <script type="module" src="popup.js"></script>
 </html>
